force-app/main/default/objects/Appartment__c/Appartment__c.object-meta.xml
<CustomObject>
    <label>Appartment</label>
    <nameField>
        <label>Appartment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appartments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>