force-app/main/default/objects/Appartment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appartments</relationshipLabel>
    <relationshipName>Appartments</relationshipName>
    <type>Lookup</type>
</CustomField>