force-app/main/default/objects/Appartment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Government Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>